--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Efeitos Globais */
 * {
     margin: 0;
     padding: 0;
@@ -82,8 +81,10 @@ a{
     padding: 35px;    
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
     gap: 150px;
+    flex: 1;
 }
 .anuncio1 a{
     text-decoration: none;
@@ -125,7 +126,7 @@ a{
     text-align: center;
     margin-bottom: 50px;
     background-color:#f1f3f7;
-    padding: 50px;
+    padding: 50px;       
 }
 .planos{    
     padding: 20px;
@@ -161,6 +162,8 @@ table img{
     justify-content: center;
     align-items: center;
     gap: 150px;
+    flex-wrap: wrap;
+    flex: 1;
 }
 .anuncio2 a{
     text-decoration: none;
@@ -204,3 +207,106 @@ table img{
 .txtrdp p span{
     color: #2f86d6;
 }
+
+.fade-in-topo {
+    position: relative;
+    overflow: hidden;
+    opacity: 0;
+    transform: translateY(-50px);
+    transition: opacity 1s, transform 1s;
+}
+.fade-in-topo.fade-in {
+    opacity: 1;
+    transform: translateX(0); 
+}
+
+
+.fade-in-botton {
+    position: relative;
+    overflow: hidden;
+    opacity: 0; 
+    transform: translateY(50px); 
+    transition: opacity 1s, transform 1s; 
+}
+.fade-in-botton.fade-in {
+    opacity: 1;
+    transform: translateX(0); 
+}
+
+.fade-in-left {
+    position: relative;
+    overflow: hidden;
+    opacity: 0;
+    transform: translateX(-50px); 
+    transition: opacity 1s, transform 1s; 
+}
+.fade-in-left.fade-in {
+    opacity: 1; 
+    transform: translateX(0);
+}
+.fade-in-right {
+    position: relative;
+    overflow: hidden; 
+    opacity: 0; 
+    transform: translateX(50px); 
+    transition: opacity 1s, transform 1s; 
+}
+.fade-in-right.fade-in {
+    opacity: 1; 
+    transform: translateX(0); 
+}
+
+@media (max-width: 768px) {
+    .container-topo {        
+      padding: 20px;
+      flex-direction: column;
+    }
+  
+    .container-logo, .container-links {
+      margin-bottom: 10px;      
+    }
+  
+    .container-links a {
+      margin-right: 0;
+      display: block;
+      margin-bottom: 5px;
+      padding: 0px;
+    }
+    .anuncio1,
+    .anuncio2{
+        gap: 50px;
+    }
+    .informacoes2{
+        flex-direction: column;
+        padding: 0;
+        padding-top: 50px;       
+    }
+    
+    .planos{    
+        padding: 1px;
+        font-size: xx-small;
+    }
+    table{
+        padding: 1px;
+    }
+    table img{
+        height: 50px;
+        width: auto;
+    }
+    .planos th{
+        padding: 1px 3px;
+    }
+    .planos td{
+        padding: 1px 3px;
+    }
+    .planos p{
+        color: #a8a4a4;
+        font-size: xx-small;
+        padding: 1px;
+    }
+    .txtrdp{
+        padding: 15px;
+    }    
+    
+  }
+ 
